# the-seed

./: .aiignore  .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  structure.md  tsconfig.json
.github/: speckit.constitution.md
.github/agents/: copilot-instructions.md
native/: binding.gyp
native/src/: addon.cpp
specs/001-address-tech-debt/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-address-tech-debt/checklists/: requirements.md
specs/002-package-command/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: Build.ts  Config.ts  Dependencies.ts  DependencyWalker.ts  Installer.ts  Package.ts  RecursiveBuild.ts  ResourcePak.ts  Scopes.ts  Signing.ts  Template.ts  index.ts  types.ts
src/scripts/: BuildCLI.ts  ConfigCLI.ts  DependenciesCLI.ts  InstallerCLI.ts  PackageCLI.ts  ResourcePakCLI.ts  ScopesCLI.ts  SigningCLI.ts  TemplateCLI.ts  config.ts  the-seed.ts
templates/component/: SKELETON.pc.in  configure.ac
templates/component/src/: Makefile.am  SKELETON.cpp  SKELETON.hpp
templates/program/: configure.ac
templates/program/src/: Makefile.am  SKELETON.cpp
templates/system/: .gitignore  Makefile.am  SKELETON.pc.in  configure.ac
templates/system/src/: Makefile.am  SKELETON.cpp  (+1 more)
test/: Build.test.ts  BuildCLI.test.ts  Config.test.ts  Dependencies.test.ts  DependencyWalker.test.ts  Installer.test.ts  Package.test.ts  RecursiveBuild.test.ts  ResourcePak.test.ts  Scopes.test.ts  Signing.embedded.test.ts  Signing.test.ts  Signing.verify.embedded.test.ts  Template.test.ts
(+10 files in other folders)
