AC_PREREQ([2.71])
AC_INIT([SKELETON],[0.0.1],[AUTHOR_EMAIL],[SKELETON],[AUTHOR_URL])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
AM_INIT_AUTOMAKE([subdir-objects])
LT_INIT

PKG_PROG_PKG_CONFIG
PKG_INSTALLDIR

AC_CONFIG_MACRO_DIR([m4])

PKG_CHECK_MODULES([LIBECS], ecs-cpp)

AC_CONFIG_FILES([Makefile src/Makefile])
AC_CONFIG_FILES([SKELETON.pc])
AC_OUTPUT
